# simu_cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  compile_commands.json  main copy.cpp  main.cpp
cmake/: FindMetawear.cmake  FindSimpleBle.cmake
examples/: CMakeLists.txt  main.cpp  test.cpp
include/simu_lib/: handler.h  metawear_async.h  metawear_transport_simpleble.h  utils.h
src/: CMakeLists.txt  handler.cpp  metawear_async.cpp  metawear_transport_simpleble.cpp
